--- a/index.html
+++ b/index.html
@@ -11,15 +11,57 @@
         <span class="spp">Советы</span>
         <span class="spps">первокурсникам</span>
       </h1>
-          <p> На протяжении одного месяца я являюсь студентом Школы Дизайна, в связи
-              с чем уже могу дать какие то советы ребятам, которые только-только начинают.
-              Предлагаю Вам ознакомиться
-              с советами и программами,
-              в которых Вам предстоит работать.
-          </p>
-          <img src="img/1.jpg" alt="" class="1pct">
+      <p>
+          На протяжении одного месяца я являюсь студентом Школы Дизайна, в связи
+          с чем уже могу дать какие то советы ребятам, которые только-только начинают.
+          Предлагаю Вам ознакомиться
+          с советами и программами,
+          в которых Вам предстоит работать.
+      </p>
+      <img src="img/1.jpg" alt="" class="pct">
     </div>
-    <div class="mp"></div>
-    <div class="hp"></div>
+    <div class="firstadv">
+       <h1>Советы</h1>
+       <div class="stripefirst">
+         <h2>
+           Посещайте все занятия
+           (хотя бы первое время)
+        </h2>
+       </div>
+       <p>На начальном этапе обучения очень важно вникнуть в процесс обучения и прочувствовать все важные моменты.  Поэтому Вам нужно посещать абсолютно все занятия.</p>
+       <img src="img/adv1.jpg" alt="" class="firstimg">
+    </div>
+    <div class="secondadv">
+      <div class="stripesecond">
+        <h2>Не накапливайте большое количество домашнего задания</h2>
+      </div>
+      <p>Из-за нового и непривычного Вам графика, вам будет довольно тяжело контролировать Ваше свободное время. Поэтому может получится так, что у Вас скопилось огромное количество домашки, которое нужно будет сделать в один день. Для того, чтобы этого избежать, достаточно просто делать значительную часть заданий заранее.
+      </p>
+      <img src="img/adv2.jpg" alt="" class="secondimg">
+    </div>
+    <div class="thirdadv">
+    <div class="stripethird">
+        <h2>Коммуницируйте с окружением</h2>
+      </div>
+     <p>Это очень важно. Так Вы сможете легко и просто выяснить у других интересующую Вас информацию или разъяснить какой-либо непонятный момент.</p>
+     <img src="img/adv3.jpg" alt="" class="thirdimg">
+    </div>
+    <div class="fourthadv">
+    <div class="stripefourth">
+        <h2>Высыпайтесь</h2>
+      </div>
+     <p>Тут всё просто. Сон является залогом Вашей продуктивной работы.</p>
+     <img src="img/adv4.jpg" alt="" class="fourthimg">
+    </div>
+    <div class="fifthadv">
+      <div class="stripefifth">
+          <h2>Оформите социальную карту</h2>
+      </div>
+      <p>Эта полезная штука поможет Вам сэкономить много денег на общественном транспорте. Особенно актуально для иногородних и иностранных студентов. </p>
+      <img src="img/adv5.jpg" alt="" class="fifthimg">
+    </div>
+    <div class="progs">
+      
+    </div>
   </body>
 </html>
