--- a/index.html
+++ b/index.html
@@ -60,8 +60,59 @@
       <p>Эта полезная штука поможет Вам сэкономить много денег на общественном транспорте. Особенно актуально для иногородних и иностранных студентов. </p>
       <img src="img/adv5.jpg" alt="" class="fifthimg">
     </div>
-    <div class="progs">
-      
+    <div class="progfirst">
+              <h1>Программы используемые
+              в процессе обучения</h1>
+              <img src="img/prog1.jpg" alt="" class="firstprog">
+              <div class="progstripefirst">
+                <h2>Adobe Illustrator</h2>
+              </div>
+              <p>Векторный графический редактор, разработанный и распространяемый фирмой Adobe Systems.Используется, в основном, для
+              работы с визуальной частью проектов.</p>
+              </div>
+    <div class="progsecond">
+      <div class="progstripesecond">
+        <h2>Adobe Photoshop</h2>
+      </div>
+      <p>Многофункциональный графический редактор, разработанный и распространяемый фирмой Adobe Systems. В основном работает с растровыми изображениями, однако имеет некоторые векторные инструменты. В работе используется не так часто, как иллюстратор, чаще всего в нём идёт оформление мокапов.</p>
+      <img src="img/prog2.jpg" alt="" class="secondprog">
+    </div>
+    <div class="progthird">
+      <div class="progstripethird">
+        <h2>Adobe InDesign</h2>
+      </div>
+      <p>Программа компьютерной вёрстки, разработанная фирмой Adobe Systems. В ней мы собираем презентации проектов.</p>
+      <img src="img/prog3.jpg" alt="" class="thirdprog">
+    </div>
+    <div class="progfourth">
+      <div class="progstripefourth">
+        <h2>Figma</h2>
+      </div>
+      <p>Онлайн-сервис для разработки интерфейсов и прототипирования с возможностью организации совместной работы в режиме реального времени.
+      В каком-то смысле это аналог иллюстратора, но в нём,
+      на мой взгляд, больше интересных функций и более удобный интерфейс (кстати, визуальная часть этого гайда создавалась именно в фигме)
+      </p>
+      <img src="img/prog4.jpg" alt="" class="fourthprog">
+    </div>
+    <div class="progfifth">
+      <div class="progstripefifth">
+        <h2>Git Hub</h2>
+      </div>
+      <p>Крупнейший веб-сервис для хостинга IT-проектов и их совместной разработки. Проще говоря, здесь хранится и передаётся код, который мы будем делать в процессе обучения</p>
+      <img src="img/prog5.jpg" alt="" class="fifthprog">
+    </div>
+    <div class="progsixth">
+      <div class="progstripesixth">
+        <h2>Atom</h2>
+      </div>
+      <p>Это программа, где мы, собственно, будем делать сам код. </p>
+      <img src="img/prog6.jpg" alt="" class="sixthprog">
+    </div>
+    <div class="concl">
+      <p>По итогу хочется отметить, что ничего страшного в том, что Вам неизвестна та или иная программа, нет, ведь работе с каждой из них Вас будут обучать. Однако
+          их знание значительно облегчит Вашу учёбу, потому что при создании проектов
+          у Вас отпадёт такая проблема, как незнание какой-либо программы.
+      </p>
     </div>
   </body>
 </html>
