--- a/index.html
+++ b/index.html
@@ -40,36 +40,37 @@
       <img src="img/adv2.jpg" alt="" class="secondimg">
     </div>
     <div class="thirdadv">
-    <div class="stripethird">
+      <div class="stripethird">
         <h2>Коммуницируйте с окружением</h2>
       </div>
-     <p>Это очень важно. Так Вы сможете легко и просто выяснить у других интересующую Вас информацию или разъяснить какой-либо непонятный момент.</p>
-     <img src="img/adv3.jpg" alt="" class="thirdimg">
+      <p>Это очень важно. Так Вы сможете легко и просто выяснить у других интересующую Вас информацию или разъяснить какой-либо непонятный момент.</p>
+      <img src="img/adv3.jpg" alt="" class="thirdimg">
     </div>
     <div class="fourthadv">
-    <div class="stripefourth">
-        <h2>Высыпайтесь</h2>
+      <div class="stripefourth">
+          <h2>Высыпайтесь</h2>
       </div>
-     <p>Тут всё просто. Сон является залогом Вашей продуктивной работы.</p>
-     <img src="img/adv4.jpg" alt="" class="fourthimg">
+      <p>Тут всё просто. Сон является залогом Вашей продуктивной работы.</p>
+      <img src="img/adv4.jpg" alt="" class="fourthimg">
     </div>
     <div class="fifthadv">
       <div class="stripefifth">
-          <h2>Оформите социальную карту</h2>
+        <h2>Оформите социальную карту</h2>
       </div>
       <p>Эта полезная штука поможет Вам сэкономить много денег на общественном транспорте. Особенно актуально для иногородних и иностранных студентов. </p>
       <img src="img/adv5.jpg" alt="" class="fifthimg">
     </div>
     <div class="progfirst">
-              <h1>Программы используемые
-              в процессе обучения</h1>
-              <img src="img/prog1.jpg" alt="" class="firstprog">
-              <div class="progstripefirst">
-                <h2>Adobe Illustrator</h2>
-              </div>
-              <p>Векторный графический редактор, разработанный и распространяемый фирмой Adobe Systems.Используется, в основном, для
-              работы с визуальной частью проектов.</p>
-              </div>
+      <h1>Программы используемые
+          в процессе обучения
+      </h1>
+      <img src="img/prog1.jpg" alt="" class="firstprog">
+      <div class="progstripefirst">
+        <h2>Adobe Illustrator</h2>
+      </div>
+      <p>Векторный графический редактор, разработанный и распространяемый фирмой Adobe Systems.Используется, в основном, для
+      работы с визуальной частью проектов.</p>
+    </div>
     <div class="progsecond">
       <div class="progstripesecond">
         <h2>Adobe Photoshop</h2>
@@ -88,7 +89,8 @@
       <div class="progstripefourth">
         <h2>Figma</h2>
       </div>
-      <p>Онлайн-сервис для разработки интерфейсов и прототипирования с возможностью организации совместной работы в режиме реального времени.
+      <p>
+      Онлайн-сервис для разработки интерфейсов и прототипирования с возможностью организации совместной работы в режиме реального времени.
       В каком-то смысле это аналог иллюстратора, но в нём,
       на мой взгляд, больше интересных функций и более удобный интерфейс (кстати, визуальная часть этого гайда создавалась именно в фигме)
       </p>
